--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/navigation_drawer"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
+
 
   <!--  <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -40,6 +41,13 @@
         android:layout_height="match_parent"
         android:id="@+id/frame_layout">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_150sdp"
+            android:id="@+id/fragment_container">
+
+        </FrameLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_button"
             android:layout_width="wrap_content"
