--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="@color/white"
-    tools:context=".NewTripActivity">
+    tools:context=".Fragments.NewTripFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/my_layout"
@@ -133,7 +133,7 @@
             android:contentDescription="@string/time_image"
             android:src="@drawable/ic_baseline_more_time_24"
             app:layout_constraintStart_toStartOf="@+id/textView6"
-            app:layout_constraintTop_toTopOf="@+id/calender_btn"/>
+            app:layout_constraintTop_toTopOf="@+id/calender_btn" />
 
         <TextView
             android:id="@+id/textView5"
