--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,13 @@
         android:id="@+id/upcomingFragment"
         android:name="com.example.easytripplanner.Fragments.UpcomingFragment"
         android:label="Upcoming Trips"
-        tools:layout="@layout/fragment_upcoming" />
+        tools:layout="@layout/fragment_upcoming" >
+        <action
+            android:id="@+id/action_upcomingFragment_to_addTripFragment"
+            app:destination="@id/addTripFragment"
+            app:popUpTo="@id/upcomingFragment"
+            app:launchSingleTop="true" />
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.easytripplanner.Fragments.LoginFragment"
@@ -41,4 +47,16 @@
         android:name="com.example.easytripplanner.Fragments.HistoryFragment"
         android:label="@string/history"
         tools:layout="@layout/fragment_history" />
+    <fragment
+        android:id="@+id/addTripFragment"
+        android:name="com.example.easytripplanner.Fragments.AddTripFragment"
+        android:label="fragment_add_trip"
+        tools:layout="@layout/fragment_add_trip" >
+        <action
+            android:id="@+id/action_addTripFragment_to_upcomingFragment"
+            app:destination="@id/upcomingFragment"
+            app:popUpTo="@id/addTripFragment"
+            app:popUpToInclusive="true"
+            app:launchSingleTop="true" />
+    </fragment>
 </navigation>
