--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -18,8 +18,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="@dimen/_16sdp"
-        android:layout_marginBottom="@dimen/_16sdp"
+        android:layout_marginEnd="@dimen/_18sdp"
+        android:layout_marginBottom="@dimen/_18sdp"
+        android:backgroundTint="@color/colorPrimary"
         android:contentDescription="@string/floating_button"
-        android:src="@drawable/ic_baseline_add_24" />
+        app:fabCustomSize="@dimen/_44sdp"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        app:tint="@color/white" />
 </RelativeLayout>
